[package]
name = "bonk-staking-rewards"
version = "0.1.0"
authors = ["hogyzen12 <billypapas12@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A composable Rust library for interacting with the Bonk Stake Program on Solana"
repository = "https://github.com/hogyzen12/bonk-staking-rewards"
readme = "readme.md"
keywords = ["solana", "bonk", "staking", "blockchain", "spl"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
exclude = ["src/bin/"]

[dependencies]
solana-sdk = "2.3.1"
solana-client = "2.3.2"
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"
borsh = "1.5.7"
bincode = "1.3"
bs58 = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
base64 = "0.22"
log = "0.4"
thiserror = "1.0"

[lib]
name = "bonk_staking_rewards"
path = "src/lib.rs"